@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.344 2005/10/07 14:45:42 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.345 2005/10/10 19:02:48 rocket Exp $
+
+  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fix broken seedcache autoresume interaction
 
   07 Oct 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
